hw3/y.output
   0  $accept : translation_unit $end

   1  primary_expression : IDENTIFIER
   2                     | CONSTANT
   3                     | STRING_LITERAL
   4                     | '(' expression ')'

   5  postfix_expression : primary_expression
   6                     | postfix_expression '[' expression ']'
   7                     | postfix_expression '(' ')'
   8                     | postfix_expression '(' argument_expression_list ')'
   9                     | postfix_expression '.' IDENTIFIER
  10                     | postfix_expression PTR_OP IDENTIFIER
  11                     | postfix_expression INC_OP
  12                     | postfix_expression DEC_OP

  13  argument_expression_list : assignment_expression
  14                           | argument_expression_list ',' assignment_expression

  15  unary_expression : postfix_expression
  16                   | INC_OP unary_expression
  17                   | DEC_OP unary_expression
  18                   | unary_operator cast_expression
  19                   | SIZEOF unary_expression
  20                   | SIZEOF '(' type_name ')'

  21  unary_operator : '&'
  22                 | '*'
  23                 | '+'
  24                 | '-'
  25                 | '~'
  26                 | '!'

  27  cast_expression : unary_expression
  28                  | '(' type_name ')' cast_expression

  29  multiplicative_expression : cast_expression
  30                            | multiplicative_expression '*' cast_expression
  31                            | multiplicative_expression '/' cast_expression
  32                            | multiplicative_expression '%' cast_expression

  33  additive_expression : multiplicative_expression
  34                      | additive_expression '+' multiplicative_expression
  35                      | additive_expression '-' multiplicative_expression

  36  shift_expression : additive_expression
  37                   | shift_expression LEFT_OP additive_expression
  38                   | shift_expression RIGHT_OP additive_expression

  39  relational_expression : shift_expression
  40                        | relational_expression '<' shift_expression
  41                        | relational_expression '>' shift_expression
  42                        | relational_expression LE_OP shift_expression
  43                        | relational_expression GE_OP shift_expression

  44  equality_expression : relational_expression
  45                      | equality_expression EQ_OP relational_expression
  46                      | equality_expression NE_OP relational_expression

  47  and_expression : equality_expression
  48                 | and_expression '&' equality_expression

  49  exclusive_or_expression : and_expression
  50                          | exclusive_or_expression '^' and_expression

  51  inclusive_or_expression : exclusive_or_expression
  52                          | inclusive_or_expression '|' exclusive_or_expression

  53  logical_and_expression : inclusive_or_expression
  54                         | logical_and_expression AND_OP inclusive_or_expression

  55  logical_or_expression : logical_and_expression
  56                        | logical_or_expression OR_OP logical_and_expression

  57  conditional_expression : logical_or_expression
  58                         | logical_or_expression '?' expression ':' conditional_expression

  59  assignment_expression : conditional_expression
  60                        | unary_expression assignment_operator assignment_expression

  61  assignment_operator : '='
  62                      | MUL_ASSIGN
  63                      | DIV_ASSIGN
  64                      | MOD_ASSIGN
  65                      | ADD_ASSIGN
  66                      | SUB_ASSIGN
  67                      | LEFT_ASSIGN
  68                      | RIGHT_ASSIGN
  69                      | AND_ASSIGN
  70                      | XOR_ASSIGN
  71                      | OR_ASSIGN

  72  expression : assignment_expression
  73             | expression ',' assignment_expression

  74  constant_expression : conditional_expression

  75  declaration : declaration_specifiers ';'
  76              | declaration_specifiers init_declarator_list ';'

  77  declaration_specifiers : storage_class_specifier
  78                         | storage_class_specifier declaration_specifiers
  79                         | type_specifier
  80                         | type_specifier declaration_specifiers
  81                         | type_qualifier
  82                         | type_qualifier declaration_specifiers

  83  init_declarator_list : init_declarator
  84                       | init_declarator_list ',' init_declarator

  85  init_declarator : declarator
  86                  | declarator '=' initializer

  87  storage_class_specifier : TYPEDEF
  88                          | EXTERN
  89                          | STATIC
  90                          | AUTO
  91                          | REGISTER

  92  type_specifier : VOID
  93                 | CHAR
  94                 | SHORT
  95                 | INT
  96                 | LONG
  97                 | FLOAT
  98                 | DOUBLE
  99                 | SIGNED
 100                 | UNSIGNED
 101                 | struct_or_union_specifier
 102                 | enum_specifier
 103                 | TYPE_NAME

 104  struct_or_union_specifier : struct_or_union IDENTIFIER '{' struct_declaration_list '}'
 105                            | struct_or_union '{' struct_declaration_list '}'
 106                            | struct_or_union IDENTIFIER

 107  struct_or_union : STRUCT
 108                  | UNION

 109  struct_declaration_list : struct_declaration
 110                          | struct_declaration_list struct_declaration

 111  struct_declaration : specifier_qualifier_list struct_declarator_list ';'

 112  specifier_qualifier_list : type_specifier specifier_qualifier_list
 113                           | type_specifier
 114                           | type_qualifier specifier_qualifier_list
 115                           | type_qualifier

 116  struct_declarator_list : struct_declarator
 117                         | struct_declarator_list ',' struct_declarator

 118  struct_declarator : declarator
 119                    | ':' constant_expression
 120                    | declarator ':' constant_expression

 121  enum_specifier : ENUM '{' enumerator_list '}'
 122                 | ENUM IDENTIFIER '{' enumerator_list '}'
 123                 | ENUM IDENTIFIER

 124  enumerator_list : enumerator
 125                  | enumerator_list ',' enumerator

 126  enumerator : IDENTIFIER
 127             | IDENTIFIER '=' constant_expression

 128  type_qualifier : CONST
 129                 | VOLATILE

 130  declarator : pointer direct_declarator
 131             | direct_declarator

 132  direct_declarator : IDENTIFIER
 133                    | '(' declarator ')'
 134                    | direct_declarator '[' constant_expression ']'
 135                    | direct_declarator '[' ']'
 136                    | direct_declarator '(' parameter_type_list ')'
 137                    | direct_declarator '(' identifier_list ')'
 138                    | direct_declarator '(' ')'

 139  pointer : '*'
 140          | '*' type_qualifier_list
 141          | '*' pointer
 142          | '*' type_qualifier_list pointer

 143  type_qualifier_list : type_qualifier
 144                      | type_qualifier_list type_qualifier

 145  parameter_type_list : parameter_list
 146                      | parameter_list ',' ELLIPSIS

 147  parameter_list : parameter_declaration
 148                 | parameter_list ',' parameter_declaration

 149  parameter_declaration : declaration_specifiers declarator
 150                        | declaration_specifiers abstract_declarator
 151                        | declaration_specifiers

 152  identifier_list : IDENTIFIER
 153                  | identifier_list ',' IDENTIFIER

 154  type_name : specifier_qualifier_list
 155            | specifier_qualifier_list abstract_declarator

 156  abstract_declarator : pointer
 157                      | direct_abstract_declarator
 158                      | pointer direct_abstract_declarator

 159  direct_abstract_declarator : '(' abstract_declarator ')'
 160                             | '[' ']'
 161                             | '[' constant_expression ']'
 162                             | direct_abstract_declarator '[' ']'
 163                             | direct_abstract_declarator '[' constant_expression ']'
 164                             | '(' ')'
 165                             | '(' parameter_type_list ')'
 166                             | direct_abstract_declarator '(' ')'
 167                             | direct_abstract_declarator '(' parameter_type_list ')'

 168  initializer : assignment_expression
 169              | '{' initializer_list '}'
 170              | '{' initializer_list ',' '}'

 171  initializer_list : initializer
 172                   | initializer_list ',' initializer

 173  statement : labeled_statement
 174            | compound_statement
 175            | expression_statement
 176            | selection_statement
 177            | iteration_statement
 178            | jump_statement

 179  labeled_statement : IDENTIFIER ':' statement
 180                    | CASE constant_expression ':' statement
 181                    | DEFAULT ':' statement

 182  compound_statement : '{' '}'
 183                     | '{' statement_list '}'
 184                     | '{' declaration_list '}'
 185                     | '{' declaration_list statement_list '}'

 186  declaration_list : declaration
 187                   | declaration_list declaration

 188  statement_list : statement
 189                 | statement_list statement

 190  expression_statement : ';'
 191                       | expression ';'

 192  selection_statement : IF '(' expression ')' statement
 193                      | IF '(' expression ')' statement ELSE statement
 194                      | SWITCH '(' expression ')' statement

 195  iteration_statement : WHILE '(' expression ')' statement
 196                      | DO statement WHILE '(' expression ')' ';'
 197                      | FOR '(' expression_statement expression_statement ')' statement
 198                      | FOR '(' expression_statement expression_statement expression ')' statement

 199  jump_statement : GOTO IDENTIFIER ';'
 200                 | CONTINUE ';'
 201                 | BREAK ';'
 202                 | RETURN ';'
 203                 | RETURN expression ';'

 204  translation_unit : external_declaration
 205                   | translation_unit external_declaration

 206  external_declaration : function_definition
 207                       | declaration

 208  function_definition : declaration_specifiers declarator declaration_list compound_statement
 209                      | declaration_specifiers declarator compound_statement
 210                      | declarator declaration_list compound_statement
 211                      | declarator compound_statement

state 0
	$accept : . translation_unit $end  (0)

	IDENTIFIER  shift 1
	TYPE_NAME  shift 2
	TYPEDEF  shift 3
	EXTERN  shift 4
	STATIC  shift 5
	AUTO  shift 6
	REGISTER  shift 7
	CHAR  shift 8
	SHORT  shift 9
	INT  shift 10
	LONG  shift 11
	SIGNED  shift 12
	UNSIGNED  shift 13
	FLOAT  shift 14
	DOUBLE  shift 15
	CONST  shift 16
	VOLATILE  shift 17
	VOID  shift 18
	STRUCT  shift 19
	UNION  shift 20
	ENUM  shift 21
	'('  shift 22
	'*'  shift 23
	.  error

	translation_unit  goto 24
	declaration  goto 25
	declaration_specifiers  goto 26
	storage_class_specifier  goto 27
	type_specifier  goto 28
	type_qualifier  goto 29
	declarator  goto 30
	struct_or_union_specifier  goto 31
	enum_specifier  goto 32
	struct_or_union  goto 33
	pointer  goto 34
	direct_declarator  goto 35
	external_declaration  goto 36
	function_definition  goto 37


state 1
	direct_declarator : IDENTIFIER .  (132)

	.  reduce 132


state 2
	type_specifier : TYPE_NAME .  (103)

	.  reduce 103


state 3
	storage_class_specifier : TYPEDEF .  (87)

	.  reduce 87


state 4
	storage_class_specifier : EXTERN .  (88)

	.  reduce 88


state 5
	storage_class_specifier : STATIC .  (89)

	.  reduce 89


state 6
	storage_class_specifier : AUTO .  (90)

	.  reduce 90


state 7
	storage_class_specifier : REGISTER .  (91)

	.  reduce 91


state 8
	type_specifier : CHAR .  (93)

	.  reduce 93


state 9
	type_specifier : SHORT .  (94)

	.  reduce 94


state 10
	type_specifier : INT .  (95)

	.  reduce 95


state 11
	type_specifier : LONG .  (96)

	.  reduce 96


state 12
	type_specifier : SIGNED .  (99)

	.  reduce 99


state 13
	type_specifier : UNSIGNED .  (100)

	.  reduce 100


state 14
	type_specifier : FLOAT .  (97)

	.  reduce 97


state 15
	type_specifier : DOUBLE .  (98)

	.  reduce 98


state 16
	type_qualifier : CONST .  (128)

	.  reduce 128


state 17
	type_qualifier : VOLATILE .  (129)

	.  reduce 129


state 18
	type_specifier : VOID .  (92)

	.  reduce 92


state 19
	struct_or_union : STRUCT .  (107)

	.  reduce 107


state 20
	struct_or_union : UNION .  (108)

	.  reduce 108


state 21
	enum_specifier : ENUM . '{' enumerator_list '}'  (121)
	enum_specifier : ENUM . IDENTIFIER '{' enumerator_list '}'  (122)
	enum_specifier : ENUM . IDENTIFIER  (123)

	IDENTIFIER  shift 38
	'{'  shift 39
	.  error


state 22
	direct_declarator : '(' . declarator ')'  (133)

	IDENTIFIER  shift 1
	'('  shift 22
	'*'  shift 23
	.  error

	declarator  goto 40
	pointer  goto 34
	direct_declarator  goto 35


state 23
	pointer : '*' .  (139)
	pointer : '*' . type_qualifier_list  (140)
	pointer : '*' . pointer  (141)
	pointer : '*' . type_qualifier_list pointer  (142)

	CONST  shift 16
	VOLATILE  shift 17
	'*'  shift 23
	IDENTIFIER  reduce 139
	'('  reduce 139
	')'  reduce 139
	'['  reduce 139
	','  reduce 139

	type_qualifier  goto 41
	pointer  goto 42
	type_qualifier_list  goto 43


state 24
	$accept : translation_unit . $end  (0)
	translation_unit : translation_unit . external_declaration  (205)

	$end  accept
	IDENTIFIER  shift 1
	TYPE_NAME  shift 2
	TYPEDEF  shift 3
	EXTERN  shift 4
	STATIC  shift 5
	AUTO  shift 6
	REGISTER  shift 7
	CHAR  shift 8
	SHORT  shift 9
	INT  shift 10
	LONG  shift 11
	SIGNED  shift 12
	UNSIGNED  shift 13
	FLOAT  shift 14
	DOUBLE  shift 15
	CONST  shift 16
	VOLATILE  shift 17
	VOID  shift 18
	STRUCT  shift 19
	UNION  shift 20
	ENUM  shift 21
	'('  shift 22
	'*'  shift 23
	.  error

	declaration  goto 25
	declaration_specifiers  goto 26
	storage_class_specifier  goto 27
	type_specifier  goto 28
	type_qualifier  goto 29
	declarator  goto 30
	struct_or_union_specifier  goto 31
	enum_specifier  goto 32
	struct_or_union  goto 33
	pointer  goto 34
	direct_declarator  goto 35
	external_declaration  goto 44
	function_definition  goto 37


state 25
	external_declaration : declaration .  (207)

	.  reduce 207


state 26
	declaration : declaration_specifiers . ';'  (75)
	declaration : declaration_specifiers . init_declarator_list ';'  (76)
	function_definition : declaration_specifiers . declarator declaration_list compound_statement  (208)
	function_definition : declaration_specifiers . declarator compound_statement  (209)

	IDENTIFIER  shift 1
	'('  shift 22
	'*'  shift 23
	';'  shift 45
	.  error

	init_declarator_list  goto 46
	init_declarator  goto 47
	declarator  goto 48
	pointer  goto 34
	direct_declarator  goto 35


state 27
	declaration_specifiers : storage_class_specifier .  (77)
	declaration_specifiers : storage_class_specifier . declaration_specifiers  (78)

	TYPE_NAME  shift 2
	TYPEDEF  shift 3
	EXTERN  shift 4
	STATIC  shift 5
	AUTO  shift 6
	REGISTER  shift 7
	CHAR  shift 8
	SHORT  shift 9
	INT  shift 10
	LONG  shift 11
	SIGNED  shift 12
	UNSIGNED  shift 13
	FLOAT  shift 14
	DOUBLE  shift 15
	CONST  shift 16
	VOLATILE  shift 17
	VOID  shift 18
	STRUCT  shift 19
	UNION  shift 20
	ENUM  shift 21
	IDENTIFIER  reduce 77
	'('  reduce 77
	')'  reduce 77
	'['  reduce 77
	','  reduce 77
	'*'  reduce 77
	';'  reduce 77

	declaration_specifiers  goto 49
	storage_class_specifier  goto 27
	type_specifier  goto 28
	type_qualifier  goto 29
	struct_or_union_specifier  goto 31
	enum_specifier  goto 32
	struct_or_union  goto 33


state 28
	declaration_specifiers : type_specifier .  (79)
	declaration_specifiers : type_specifier . declaration_specifiers  (80)

	TYPE_NAME  shift 2
	TYPEDEF  shift 3
	EXTERN  shift 4
	STATIC  shift 5
	AUTO  shift 6
	REGISTER  shift 7
	CHAR  shift 8
	SHORT  shift 9
	INT  shift 10
	LONG  shift 11
	SIGNED  shift 12
	UNSIGNED  shift 13
	FLOAT  shift 14
	DOUBLE  shift 15
	CONST  shift 16
	VOLATILE  shift 17
	VOID  shift 18
	STRUCT  shift 19
	UNION  shift 20
	ENUM  shift 21
	IDENTIFIER  reduce 79
	'('  reduce 79
	')'  reduce 79
	'['  reduce 79
	','  reduce 79
	'*'  reduce 79
	';'  reduce 79

	declaration_specifiers  goto 50
	storage_class_specifier  goto 27
	type_specifier  goto 28
	type_qualifier  goto 29
	struct_or_union_specifier  goto 31
	enum_specifier  goto 32
	struct_or_union  goto 33


state 29
	declaration_specifiers : type_qualifier .  (81)
	declaration_specifiers : type_qualifier . declaration_specifiers  (82)

	TYPE_NAME  shift 2
	TYPEDEF  shift 3
	EXTERN  shift 4
	STATIC  shift 5
	AUTO  shift 6
	REGISTER  shift 7
	CHAR  shift 8
	SHORT  shift 9
	INT  shift 10
	LONG  shift 11
	SIGNED  shift 12
	UNSIGNED  shift 13
	FLOAT  shift 14
	DOUBLE  shift 15
	CONST  shift 16
	VOLATILE  shift 17
	VOID  shift 18
	STRUCT  shift 19
	UNION  shift 20
	ENUM  shift 21
	IDENTIFIER  reduce 81
	'('  reduce 81
	')'  reduce 81
	'['  reduce 81
	','  reduce 81
	'*'  reduce 81
	';'  reduce 81

	declaration_specifiers  goto 51
	storage_class_specifier  goto 27
	type_specifier  goto 28
	type_qualifier  goto 29
	struct_or_union_specifier  goto 31
	enum_specifier  goto 32
	struct_or_union  goto 33


state 30
	function_definition : declarator . declaration_list compound_statement  (210)
	function_definition : declarator . compound_statement  (211)

	TYPE_NAME  shift 2
	TYPEDEF  shift 3
	EXTERN  shift 4
	STATIC  shift 5
	AUTO  shift 6
	REGISTER  shift 7
	CHAR  shift 8
	SHORT  shift 9
	INT  shift 10
	LONG  shift 11
	SIGNED  shift 12
	UNSIGNED  shift 13
	FLOAT  shift 14
	DOUBLE  shift 15
	CONST  shift 16
	VOLATILE  shift 17
	VOID  shift 18
	STRUCT  shift 19
	UNION  shift 20
	ENUM  shift 21
	'{'  shift 52
	.  error
